QCanDbcFileParser: fix the size of Unique Id

The unique id can contain 11 or 29 bits, so apply a mask when
extracting it.
Update the unit-tests to use a bus value with the 31-st bit set,
to make sure that we handle such values correctly.

Fixes: QTBUG-114043
Pick-to: 6.6 6.5
Change-Id: I1164bc13980af998007e35a3dcb4c22db2bda755
Reviewed-by: André Hartmann <aha_1980@gmx.de>